@@ -16,24 +16,24 @@ public class UniProcess {
 
     public CompletableFuture<List<Price>> convertPriceToFuture(List<Uni<Price>> uniList) {
         List<CompletableFuture<Price>> completableFutures = uniList.stream()
-            .map(uni -> uni.subscribe().asCompletionStage().toCompletableFuture())
-            .collect(Collectors.toList());
+                .map(uni -> uni.subscribe().asCompletionStage().toCompletableFuture())
+                .toList();
 
         CompletableFuture<Void> allOf = CompletableFuture.allOf(
-            completableFutures.toArray(new CompletableFuture[0])
+                completableFutures.toArray(new CompletableFuture[0])
         );
 
         return allOf.thenApply(ignored ->
-            completableFutures.stream()
-                .map(CompletableFuture::join) 
-                .collect(Collectors.toList())
+                completableFutures.stream()
+                        .map(CompletableFuture::join)
+                        .collect(Collectors.toList())
         );
     }
 
     public CompletableFuture<List<Category>> convertCategoryToFuture(List<Uni<Category>> uniList) {
         List<CompletableFuture<Category>> completableFutures = uniList.stream()
             .map(uni -> uni.subscribe().asCompletionStage().toCompletableFuture())
-            .collect(Collectors.toList());
+            .toList();
 
         CompletableFuture<Void> allOf = CompletableFuture.allOf(
             completableFutures.toArray(new CompletableFuture[0])
@@ -49,7 +49,7 @@ public class UniProcess {
     public CompletableFuture<List<Platform>> convertPlatformToFuture(List<Uni<Platform>> uniList) {
         List<CompletableFuture<Platform>> completableFutures = uniList.stream()
             .map(uni -> uni.subscribe().asCompletionStage().toCompletableFuture())
-            .collect(Collectors.toList());
+            .toList();
 
         CompletableFuture<Void> allOf = CompletableFuture.allOf(
             completableFutures.toArray(new CompletableFuture[0])
@@ -65,7 +65,7 @@ public class UniProcess {
         public CompletableFuture<List<Product>> convertProductToFuture(List<Uni<Product>> uniList) {
         List<CompletableFuture<Product>> completableFutures = uniList.stream()
             .map(uni -> uni.subscribe().asCompletionStage().toCompletableFuture())
-            .collect(Collectors.toList());
+            .toList();
 
         CompletableFuture<Void> allOf = CompletableFuture.allOf(
             completableFutures.toArray(new CompletableFuture[0])
